2008-02-20  Akira TAGOH  <tagoh@redhat.com>

	* data/xinputinfo.sh.in: Fix to output quoted strings properly.

2008-02-19  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Add a hack to ensure starting the user specific
	xinput script.

	* configure.ac: Make sure gamin is installed.

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	Update the list on toggling IM feature activation.
	(im_chooser_simple_im_list_on_changed): Validate the value to not segfault.
	(im_chooser_simple_instance_init): Reflect current locale to the requester.
	(im_chooser_simple_sort_compare): Removed. no longer need to sort in house.

2008-02-08  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.99.1.

	* data/xinput.sh.in.in: get rid of a workaround.

	* configure.ac: add --enable-debug option.

	* src/im-chooser-simple.c (im_chooser_simple_finalize): unref objects.

2008-02-01  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	Choose the recommended IM if no current IM is running. otherwise
	the first entry will.

2008-01-30  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Add a wait for a workaround that something
	is stalled at gnome-session.

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	don't send any requests if it's still at the initialization.
	(im_chooser_simple_enable_im_on_toggled): Update the preference button
	state after the current position is set.
	(im_chooser_simple_sort_compare): new.
	(_im_chooser_simple_update_im_list): sort out according to whether
	it's the system default and the legacy IM.

2008-01-29  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: turn off -Wall and -Werror if it's not with
	--enable-maintainer-mode.

2008-01-28  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_im_list_on_changed):
	send a changed signal.
	(_im_chooser_simple_update_im_list): set initial IM if not yet.